main/dmvpn: various fixes
define ciphers for better security and performance
close inactive SAs
fix race conditions

--- a/main/dmvpn/APKBUILD
+++ b/main/dmvpn/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 pkgname=dmvpn
 pkgver=1.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Dynamic Multipoint VPN"
 url="https://git.alpinelinux.org/cgit/dmvpn-tools/"
 arch="noarch"
@@ -11,7 +11,12 @@ depends="augeas bind-tools lua5.2 lua5.2-cqueues lua5.2-lyaml lua5.2-ossl
          lua5.2-posix lua5.2-struct lua-dmvpn quagga strongswan tunnel"
 subpackages="dmvpn-ca dmvpn-crl-dp lua-dmvpn"
 options="!check"
-source="$url/snapshot/dmvpn-tools-$pkgver.tar.bz2"
+source="$url/snapshot/dmvpn-tools-$pkgver.tar.bz2
+        0001-use-static-config-file-for-charon.patch
+        0002-enable-make_before_break-for-charon.patch
+        0003-close-IKE-SA-on-inactivity.patch
+        0004-define-cipher-proposals.patch
+        0005-nhrp-events-wait-for-socket-creation-on-startup.patch"
 builddir="$srcdir/dmvpn-tools-$pkgver"
 
 build() {
@@ -24,6 +29,7 @@ package() {
 	install -D -m 644 dmvpn.awall "$pkgdir"/usr/share/awall/optional/dmvpn.json
 	install -D -m 644 dmvpn-hub.awall "$pkgdir"/usr/share/awall/optional/dmvpn-hub.json
 	install -D dmvpn-pfx-decode "$pkgdir"/usr/libexec/dmvpn-pfx-decode
+	install -D -m 644 dmvpn.charon "$pkgdir"/etc/strongswan.d/dmvpn.conf
 	install -D -m 644 dmvpn.swanctl "$pkgdir"/etc/swanctl/conf.d/dmvpn.conf
 	install -D nhrp-events "$pkgdir"/usr/sbin/nhrp-events
 	install -D nhrp-events.initd "$pkgdir"/etc/init.d/nhrp-events
@@ -58,4 +64,9 @@ dmvpn() {
 	install -D -m 644 dmvpn.lua "$subpkgdir"/usr/share/lua/5.2/dmvpn.lua
 }
 
-sha512sums="f39ad5b65a39d22a635a5f82f6024e21a6f899119718b5775eba965b903f007f611f6ea2c3456766f6f1e48d00fa43ddc5a8b3e8c9a732785c3db5ddf057c7b8  dmvpn-tools-1.2.1.tar.bz2"
+sha512sums="f39ad5b65a39d22a635a5f82f6024e21a6f899119718b5775eba965b903f007f611f6ea2c3456766f6f1e48d00fa43ddc5a8b3e8c9a732785c3db5ddf057c7b8  dmvpn-tools-1.2.1.tar.bz2
+1f80f10e90599780292be58ddad449bd3cf468458c5cd2dc9f7f7422b531f3507645017e404673fe4afc00679bf8fd24596964d070e8fd2e17e0297060954c98  0001-use-static-config-file-for-charon.patch
+eaffb04e5ae8f8c5796aca463d632fe62ed5b72a3606280a243bd7c978a9bd1095a15a06fb6eda86e22a9f15bd7fdd1ec27cf6ad1c7729f8b9f7dc3085bbbdf4  0002-enable-make_before_break-for-charon.patch
+5610a410a2267d1309d64515ed0f4d920b9ab6424db038ebeb47debf5ba46c1642b803ac67a125a371ac70dfaf4be9ac3bf9a1b546f78a1d2e268a22320a804d  0003-close-IKE-SA-on-inactivity.patch
+1828da98ab9fb1060ebed08f510d1c91eee795bb410cbc54a31c3bfe7d1c349461025e63d968575851f2772d2160c83682415f79ce3fe860336b1bd6adfbc22c  0004-define-cipher-proposals.patch
+2358c5873d431b211a51ac60100f93e5880ecdc649a6d00bef38a14464dae3f7c200590298075247dee21353c7d7c1f1e646dd9f1faf77e4e606cbc7b89de574  0005-nhrp-events-wait-for-socket-creation-on-startup.patch"
