main/dmvpn: fix race condition
avoid creating superfluous child SAs during IKE SA reauthentication

--- a/main/dmvpn/APKBUILD
+++ b/main/dmvpn/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 pkgname=dmvpn
 pkgver=1.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Dynamic Multipoint VPN"
 url="https://git.alpinelinux.org/cgit/dmvpn-tools/"
 arch="noarch"
@@ -11,7 +11,9 @@ depends="augeas bind-tools lua5.2 lua5.2-cqueues lua5.2-lyaml lua5.2-ossl
          lua5.2-posix lua5.2-struct lua-dmvpn quagga strongswan tunnel"
 subpackages="dmvpn-ca dmvpn-crl-dp lua-dmvpn"
 options="!check"
-source="$url/snapshot/dmvpn-tools-$pkgver.tar.bz2"
+source="$url/snapshot/dmvpn-tools-$pkgver.tar.bz2
+        0001-use-static-config-file-for-charon.patch
+        0002-enable-make_before_break-for-charon.patch"
 builddir="$srcdir/dmvpn-tools-$pkgver"
 
 build() {
@@ -24,6 +26,7 @@ package() {
 	install -D -m 644 dmvpn.awall "$pkgdir"/usr/share/awall/optional/dmvpn.json
 	install -D -m 644 dmvpn-hub.awall "$pkgdir"/usr/share/awall/optional/dmvpn-hub.json
 	install -D dmvpn-pfx-decode "$pkgdir"/usr/libexec/dmvpn-pfx-decode
+	install -D -m 644 dmvpn.charon "$pkgdir"/etc/strongswan.d/dmvpn.conf
 	install -D -m 644 dmvpn.swanctl "$pkgdir"/etc/swanctl/conf.d/dmvpn.conf
 	install -D nhrp-events "$pkgdir"/usr/sbin/nhrp-events
 	install -D nhrp-events.initd "$pkgdir"/etc/init.d/nhrp-events
@@ -58,4 +61,6 @@ dmvpn() {
 	install -D -m 644 dmvpn.lua "$subpkgdir"/usr/share/lua/5.2/dmvpn.lua
 }
 
-sha512sums="f39ad5b65a39d22a635a5f82f6024e21a6f899119718b5775eba965b903f007f611f6ea2c3456766f6f1e48d00fa43ddc5a8b3e8c9a732785c3db5ddf057c7b8  dmvpn-tools-1.2.1.tar.bz2"
+sha512sums="f39ad5b65a39d22a635a5f82f6024e21a6f899119718b5775eba965b903f007f611f6ea2c3456766f6f1e48d00fa43ddc5a8b3e8c9a732785c3db5ddf057c7b8  dmvpn-tools-1.2.1.tar.bz2
+4110663f6f896320193e18a5a004db7bd4915cc18565e7300827a736c6fd56f909b9ca1ba07a12958ee5673cb51603b3a0a084cd2f47154eb78de931a1fddd41  0001-use-static-config-file-for-charon.patch
+849927417e00472a7c01375b6451638c7b38fc7cf2471e659aec4de63f341f040aa3f8cf9fff976ce4827b7f5ed9eeff51d60f314121a74b106012c18f8c0727  0002-enable-make_before_break-for-charon.patch"
