--- a/main/openssh/APKBUILD
+++ b/main/openssh/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=openssh
-pkgver=8.1_p1
+pkgver=8.2_p1
 _myver=${pkgver%_*}${pkgver#*_}
 pkgrel=0
 pkgdesc="Port of OpenBSD's free SSH release"
@@ -27,10 +27,10 @@ subpackages="$pkgname-dbg
 	$pkgname-server
 	"
 for _flavour in $_pkgsupport; do
-	subpackages="$subpackages ${pkgname}-server-$_flavour:_pkg_flavour"
+	subpackages="$subpackages $pkgname-server-$_flavour:_pkg_flavour"
 done
 
-source="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/$pkgname-$_myver.tar.gz
+source="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/openssh-$_myver.tar.gz
 	fix-utmp.patch
 	sftp-interactive.patch
 	disable-forwarding-by-default.patch
@@ -57,15 +57,13 @@ source="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/$pkgname-$_myver.ta
 builddir="$srcdir"/$pkgname-$_myver
 
 prepare() {
-	cd "$builddir"
 	default_prepare
 	for _flavour in $_pkgsupport; do
-		cp -a "$srcdir"/$pkgname-$_myver "$srcdir"/$pkgname-${_myver}-$_flavour
+		cp -a "$srcdir"/$pkgname-$_myver "$srcdir"/$pkgname-$_myver-$_flavour
 	done
 }
 
 build() {
-	cd "$builddir"
 	export LD="$CC"
 	export TEST_SSH_UTF8=no # utf8 test fails
 	_configure_vanilla="./configure \
@@ -108,12 +106,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make tests
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	mkdir -p "$pkgdir"/var/empty
 	install -D -m755 "$srcdir"/sshd.initd \
@@ -202,12 +198,12 @@ _pkg_flavour() {
 	pkgdesc="OpenSSH server with $_flavour support"
 	depends="openssh-keygen openssh-server-common"
 	for _flavour in $_pkgsupport; do
-		cd "${builddir}"-$_flavour
-		_server "${builddir}"-$_flavour
+		cd "$builddir"-$_flavour
+		_server "$builddir"-$_flavour
 	done
 }
 
-sha512sums="b987ea4ffd4ab0c94110723860273b06ed8ffb4d21cbd99ca144a4722dc55f4bf86f6253d500386b6bee7af50f066e2aa2dd095d50746509a10e11221d39d925  openssh-8.1p1.tar.gz
+sha512sums="c4db64e52a3a4c410de9de49f9cb104dd493b10250af3599b92457dd986277b3fd99a6f51cec94892fd1be5bd0369c5757262ea7805f0de464b245c3d34c120a  openssh-8.2p1.tar.gz
 f35fffcd26635249ce5d820e7b3e406e586f2d2d7f6a045f221e2f9fb53aebc1ab1dd1e603b3389462296ed77921a1d08456e7aaa3825cbed08f405b381a58e1  fix-utmp.patch
 c1d09c65dbc347f0904edc30f91aa9a24b0baee50309536182455b544f1e3f85a8cecfa959e32be8b101d8282ef06dde3febbbc3f315489339dcf04155c859a9  sftp-interactive.patch
 8df35d72224cd255eb0685d2c707b24e5eb24f0fdd67ca6cc0f615bdbd3eeeea2d18674a6af0c6dab74c2d8247e2370d0b755a84c99f766a431bc50c40b557de  disable-forwarding-by-default.patch
