main/mg: upgrade to 20200215

--- a/main/mg/APKBUILD
+++ b/main/mg/APKBUILD
@@ -1,26 +1,21 @@
 # Contributor: Lee Hinman <hinman@gmail.com>
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=mg
-pkgver=20180927
-pkgrel=2
+pkgver=20200215
+pkgrel=0
 pkgdesc="microscopic EMACS style editor"
 url="https://github.com/hboetes/mg"
 arch="all"
 license="Public-Domain"
-depends=
 makedepends="ncurses-dev libbsd-dev bsd-compat-headers"
-install=
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/hboetes/$pkgname/archive/$pkgver.tar.gz"
-builddir="$srcdir"/$pkgname-$pkgver
+source="$pkgname-$pkgver.tar.gz::https://github.com/hboetes/mg/archive/$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	make prefix=/usr mandir=/usr/share/man
 }
 
 package() {
-	cd "$builddir"
 	make INSTALL=install DESTDIR="$pkgdir" prefix=/usr \
 		mandir=/usr/share/man install
 
@@ -29,4 +24,4 @@ package() {
 		"$pkgdir"/usr/share/doc/$pkgname
 }
 
-sha512sums="08b80bc46603400c9f9cbf247a9854302eb1a0af5c8fcf9bc5e33fe5107fbc81ac157dd3439fe3b5e1e2a761b679404699a0cfc1eeb101cf75e3487469166251  mg-20180927.tar.gz"
+sha512sums="c6cda5544210bc3d3fa3cbb8494e60949e10ed3716d96b76d0c9e7f5671c7a85f6e7e7a860cfd05466f1bf52112053c722441ff338210c0ada89f10515ac170a  mg-20200215.tar.gz"
