community/meld: upgrade to 3.20.2
Also make noarch and enable tests

--- a/community/meld/APKBUILD
+++ b/community/meld/APKBUILD
@@ -1,27 +1,38 @@
 # Contributor: August Klein <amatcoder@gmail.com>
+# Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: August Klein <amatcoder@gmail.com>
 pkgname=meld
-pkgver=3.20.1
-pkgrel=3
+pkgver=3.20.2
+pkgrel=0
 pkgdesc="A visual diff and merge tool"
 url="https://meldmerge.org"
-arch="all !s390x" # missing gtksourceview
+arch="noarch !s390x" # missing gtksourceview
 license="GPL-2.0-or-later"
 depends="dconf gtksourceview gsettings-desktop-schemas py3-gobject3
 	py3-cairo"
 makedepends="intltool itstool libxml2-utils"
+checkdepends="py3-pytest xvfb-run gtk-update-icon-cache"
 subpackages="$pkgname-lang $pkgname-doc"
-source="https://download.gnome.org/sources/meld/${pkgver%.*}/meld-$pkgver.tar.xz
-	python-3.8.patch
-	"
+source="https://download.gnome.org/sources/meld/${pkgver%.*}/meld-$pkgver.tar.xz"
+
+prepare() {
+	default_prepare
+
+	# Needs meld icons, so we'd need to mess around with gtk discovering the icons
+	# in place and generating an icon cache etc. so let's disable it for now.
+	rm test/test_gutterrendererchunk.py
+}
 
 build() {
 	python3 setup.py build
+}
+
+check() {
+	PYTHONPATH="$PWD/build/lib" xvfb-run pytest-3
 }
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="cd21f298dc1da6eb08261599b9270989c837e0923d5cf5cfdad227dd7f256ac5f53ac903939ebef90ea6cd684c7355ce9482648057284f4ce44f1c7101959c1f  meld-3.20.1.tar.xz
-ac587c9b7f8d3d227439fb679acf287e91215b0acb29d703de8da2768773c668fdc17c183d01d3b0a56db842e2a8f4509b2065a0a9ee4a489fa233c51cf62d3e  python-3.8.patch"
+sha512sums="9c9074cb879e3574eb9a1025eb1212771419ab0d8e92bf8a99f38e70ca583ff5c8cbeaccb87b414e6ff73a61afa08e10742991d574b810cc90e8c4a5ac82ddaa  meld-3.20.2.tar.xz"
