testing/py3-language-server: disable tests on armhf due to missing testdeps

--- a/testing/py3-language-server/APKBUILD
+++ b/testing/py3-language-server/APKBUILD
@@ -14,6 +14,11 @@ checkdepends="py3-pytest py3-mock py3-pycodestyle py3-pyflakes py3-mccabe
 source="https://github.com/palantir/python-language-server/archive/$pkgver/python-language-server-$pkgver.tar.gz"
 builddir="$srcdir/python-language-server-$pkgver"
 
+case "$CARCH" in
+	# Missing checkdepends: py3-qt5
+	armhf) options="$options !check" ;;
+esac
+
 build() {
 	python3 setup.py build
 }
