--- a/community/lightdm/APKBUILD
+++ b/community/lightdm/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=lightdm
 pkgver=1.30.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A cross-desktop display manager"
 url="https://www.freedesktop.org/wiki/Software/LightDM"
 arch="all !s390x" # gnome-themes-standard missing due to librsvg
@@ -22,6 +22,7 @@ source="https://github.com/CanonicalLtd/lightdm/releases/download/$pkgver/lightd
 	musl-updwtmpx.patch
 	disallow-guest.patch
 	allow-null-passwd.patch
+	auto-unlock-keyring.patch
 	lightdm.initd"
 
 build() {
@@ -67,4 +68,5 @@ aa33888f61b61f6c8082c77dc0b539fa14fb395c17e70b825ba88af7bb6adaad8f99583342a77442
 876088f21e502630c7d13343b03785d3327727c25657690c8e1cff5428a36944eb75d538f24ab4f5b11f931d8fad51241f25046da370eb5868aa8d2860be4eb2  musl-updwtmpx.patch
 c5bf8cfc0b4c4f95d9c9a3fa517b6c8ec90e02d84fb4498176b4745ed6089576fab536e9a3595200443811f05f2d47ac5e7c0205c878d9c23eff4dda7093ad6c  disallow-guest.patch
 7d31a5d7034e665a86a7067654c8865fa5db98b58c32afab6077d589c0cd1351bfbfb4625e5e1b2ccf8c98bc08e7c97412c528311c3c32da0b8e45916f8de767  allow-null-passwd.patch
+24771daeb48af67d5f922cce3d5b784fdccbda3aed26f3b788f7ba5539e6681ab7d74863e103067029f0ec3f1313fd8bd1fd5a8c860208958561cbf3956c87d8  auto-unlock-keyring.patch
 9f75dacbb3ec1d99b2f27f7717f47b62a9146764e86986a77d0935da813ebe5cdebe82b25d960bcd3fd44bb73b7a6465dd2ea5e0710b2febbe99190d5fbb8812  lightdm.initd"
