testing/autofs: install default configuration
fixes #11225

--- a/testing/autofs/APKBUILD
+++ b/testing/autofs/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Alex Laskin <alex@lask.in>
 pkgname=autofs
 pkgver=5.1.6
-pkgrel=0
+pkgrel=1
 pkgdesc="A kernel-based automounter for Linux"
 url="https://www.kernel.org/pub/linux/daemons/autofs/"
 arch="all"
@@ -39,6 +39,13 @@ build() {
 package() {
 	make DESTDIR="$pkgdir" install
 
+	mkdir -p "$pkgdir"/etc/autofs/
+	install -m644 samples/auto.master \
+		samples/auto.misc \
+		samples/auto.net \
+		samples/auto.smb \
+		"$pkgdir"/etc/autofs/
+
 	install -m755 -D "$srcdir"/$pkgname.initd \
 		"$pkgdir"/etc/init.d/$pkgname
 
@@ -46,8 +53,6 @@ package() {
 		"$pkgdir"/etc/conf.d/$pkgname
 
 	rm -f "$pkgdir"/usr/share/man/man5/autofs.5
-	rm -rf "$pkgdir"/etc/default
-	rm -f "$pkgdir"/autofs
 }
 
 sha512sums="dc8b2bd86c140905dd1bc461bfc469f92363d9c2687fe422e1e751cc7ad64c0733b011c80bf4840e510e5909176cd1a066968b9a5ba835b62c4cf27537863cf2  autofs-5.1.6.tar.xz
