community/swaylock: automatically unlock GNOME keyring and kwallet

--- a/community/swaylock/APKBUILD
+++ b/community/swaylock/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=swaylock
 pkgver=1.5
-pkgrel=0
+pkgrel=1
 pkgdesc="Screen locker for Wayland"
 url="http://swaywm.org"
 arch="all"
@@ -30,6 +30,20 @@ prepare() {
 	default_prepare
 	sed -i 's/login/base-auth/g' \
 		pam/swaylock
+
+	cat <<-__EOF__ >> pam/swaylock
+
+	# Unlock GNOME Keyring if available
+	-auth       optional     pam_gnome_keyring.so
+	-session    optional     pam_gnome_keyring.so auto_start
+
+	# Unlock KWallet if available
+	-auth    optional        pam_kwallet.so
+	-auth    optional        pam_kwallet5.so
+	-session optional        pam_kwallet.so auto_start
+	-session optional        pam_kwallet5.so auto_start
+	__EOF__
+
 }
 
 build() {
