community/epiphany: upgrade to 3.34.4

--- a/community/epiphany/APKBUILD
+++ b/community/epiphany/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=epiphany
-pkgver=3.34.3.1
-pkgrel=1
+pkgver=3.34.4
+pkgrel=0
 pkgdesc="A simple, clean, beautiful view of the web"
 url="https://wiki.gnome.org/Apps/Web"
 arch="all !s390x" # libhandy is not available on s390x
@@ -13,7 +13,7 @@ makedepends="meson iso-codes-dev gtk+3.0-dev gsettings-desktop-schemas-dev
 	libsoup-dev libxml2-dev nettle-dev sqlite-dev webkit2gtk-dev gcr-dev itstool"
 checkdepends="appstream-glib desktop-file-utils xvfb-run ibus"
 subpackages="$pkgname-lang $pkgname-doc"
-source="https://download.gnome.org/sources/epiphany/${pkgver%.*.*}/epiphany-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/epiphany/${pkgver%.*}/epiphany-$pkgver.tar.xz"
 
 build() {
 	meson \
@@ -35,4 +35,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="c4692ff8c4ea534a420cc8469c1b1f8f6ad7ad83f687ffd0bedc6d6d71b83391c9b65c7a9a21190ce92bd709569a423700e1ac2be6bcfe413e47e5702f51aa0e  epiphany-3.34.3.1.tar.xz"
+sha512sums="d9700196e0397032dd84d1fbf14d193f4212dd8dc054320267b4dfc8a59246de9c93fb786ba76463f0c09e7997b26efa17288cc06eddd0fb4aad2e4bdd4276ce  epiphany-3.34.4.tar.xz"
