testing/sqlar: store commit hash in a dedicated variable

--- a/testing/sqlar/APKBUILD
+++ b/testing/sqlar/APKBUILD
@@ -2,6 +2,7 @@
 # Maintainer: wener <wenermail@gmail.com>
 pkgname="sqlar"
 pkgver=0_git20180107
+_commit=4824e7389653a46f
 pkgrel=0
 pkgdesc="SQLite Archiver"
 url="https://sqlite.org/sqlar"
@@ -9,7 +10,7 @@ arch="all"
 license="BSD-2-Clause"
 makedepends="zlib-dev sqlite-dev fuse-dev"
 options="!check" # does not have a test suite
-source="sqlar-v$pkgver.tar.gz::https://www.sqlite.org/sqlar/tarball/sqlar.tar.gz?c=4824e7389653a46f"
+source="sqlar-v$pkgver.tar.gz::https://www.sqlite.org/sqlar/tarball/sqlar.tar.gz?c=$_commit"
 builddir="$srcdir/$pkgname"
 
 build() {
