testing/sqlar: respect our CFLAGS and LDFLAGS

--- a/testing/sqlar/APKBUILD
+++ b/testing/sqlar/APKBUILD
@@ -15,8 +15,10 @@ source="sqlar-v$pkgver.tar.gz::https://www.sqlite.org/sqlar/tarball/sqlar.tar.gz
 builddir="$srcdir/$pkgname"
 
 build() {
-	gcc sqlarfs.c -D_FILE_OFFSET_BITS=64 -lsqlite3 -lfuse -lz -o sqlarfs
-	gcc sqlar.c -D_FILE_OFFSET_BITS=64 -lsqlite3 -lz -o sqlar
+	gcc sqlarfs.c -o sqlarfs -D_FILE_OFFSET_BITS=64 $CFLAGS \
+		-lsqlite3 -lfuse -lz $LDFLAGS
+	gcc sqlar.c -o sqlar -D_FILE_OFFSET_BITS=64 $CFLAGS \
+		-lsqlite3 -lz $LDFLAGS
 }
 
 package() {
