testing/sqlar: change name of source tarball

--- a/testing/sqlar/APKBUILD
+++ b/testing/sqlar/APKBUILD
@@ -11,7 +11,7 @@ license="BSD-2-Clause"
 makedepends="zlib-dev sqlite-dev fuse-dev"
 options="!check" # does not have a test suite
 subpackages="$pkgname-doc"
-source="sqlar-v$pkgver.tar.gz::https://www.sqlite.org/sqlar/tarball/sqlar.tar.gz?c=$_commit"
+source="$pkgname-$pkgver.tar.gz::https://www.sqlite.org/sqlar/tarball/sqlar.tar.gz?c=$_commit"
 builddir="$srcdir/$pkgname"
 
 build() {
@@ -28,4 +28,4 @@ package() {
 		"$pkgdir"/usr/share/doc/$pkgname/README.md
 }
 
-sha512sums="b8c9c047b40b8b8065338f32801d0f2c46e14420735c3667ecbe3c75c0c9e5d87f6007c1022fea0c74ad93b653cc6845fabd66dcf637e8a85470a007fd50dd83  sqlar-v0_git20180107.tar.gz"
+sha512sums="b8c9c047b40b8b8065338f32801d0f2c46e14420735c3667ecbe3c75c0c9e5d87f6007c1022fea0c74ad93b653cc6845fabd66dcf637e8a85470a007fd50dd83  sqlar-0_git20180107.tar.gz"
