--- a/testing/liquidctl/APKBUILD
+++ b/testing/liquidctl/APKBUILD
@@ -1,13 +1,14 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=liquidctl
-pkgver=1.1.0
-pkgrel=1
+pkgver=1.3.2
+pkgrel=0
 pkgdesc="Liquid Cooler Control"
 url="https://github.com/jonasmalacofilho/liquidctl"
 arch="noarch"
 license="GPL-3.0-or-later"
 depends="python3 py3-setuptools py3-docopt py3-usb py3-hidapi"
+subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/jonasmalacofilho/liquidctl/archive/v$pkgver.tar.gz"
 
 build() {
@@ -20,6 +21,7 @@ check() {
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
+	install -Dm644 liquidctl.8 "$pkgdir"/usr/share/man/man8/liquidctl.8
 }
 
-sha512sums="ea09d2bd53d130098b8ded57629dc44769cca2383a866f347c7237a21d8e2d3e6c501859fe57951eefd4f0161e2cb83c58582ba29b5d3b6dc3ef77585002866e  liquidctl-1.1.0.tar.gz"
+sha512sums="5365b9d7d1d138a1374fbe18568c612333b9ca413206b4c7a248a631898b1fd504675f431a0bf3d1eea9c9c9172a4f9a8efcc9f44976edeee67caf6e0fbd29df  liquidctl-1.3.2.tar.gz"
