community/flatpak: add -dbg subpkg

--- a/community/flatpak/APKBUILD
+++ b/community/flatpak/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=flatpak
 pkgver=1.6.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Application deployment framework for desktop apps"
 url="https://flatpak.org"
 arch="all"
@@ -13,7 +13,7 @@ makedepends="glib-dev libarchive-dev libsoup-dev libcap-dev polkit-dev
 	libxau-dev ostree-dev>=2018.08 fuse-dev json-glib-dev
 	libgcab-dev appstream-glib-dev dconf-dev
 	libseccomp-dev libxslt-dev gpgme-dev bison"
-subpackages="$pkgname-dev $pkgname-lang"
+subpackages="$pkgname-dev $pkgname-lang $pkgname-dbg"
 install="flatpak.pre-install flatpak.pre-upgrade"
 source="https://github.com/flatpak/flatpak/releases/download/$pkgver/flatpak-$pkgver.tar.xz
 		musl-fixes.patch
