--- a/community/gnome-online-accounts/APKBUILD
+++ b/community/gnome-online-accounts/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-online-accounts
 pkgver=3.34.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Single sign-on framework for GNOME"
 url="https://wiki.gnome.org/Projects/GnomeOnlineAccounts"
 arch="all"
@@ -10,7 +10,7 @@ license="GPL-2.0-or-later"
 makedepends="gnome-desktop-dev libxslt itstool libxml2-utils
 	webkit2gtk-dev json-glib-dev rest-dev libsecret-dev
 	docbook-xsl docbook-xml gobject-introspection-dev vala"
-subpackages="$pkgname-dev $pkgname-lang $pkgname-doc"
+subpackages="$pkgname-dev $pkgname-lang $pkgname-doc $pkgname-dbg"
 source="https://download.gnome.org/sources/gnome-online-accounts/${pkgver%.*}/gnome-online-accounts-$pkgver.tar.xz"
 
 build() {
