community/gspell: add -dbg subpkg

--- a/community/gspell/APKBUILD
+++ b/community/gspell/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gspell
 pkgver=1.8.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Flexible API to add spell checking to a GTK+ application"
 options="!check" # Test fails because of missing machine-id
 url="https://wiki.gnome.org/Projects/gspell"
@@ -12,7 +12,7 @@ depends="iso-codes"
 makedepends="glib-dev vala iso-codes-dev gtk+3.0-dev enchant2-dev
 	gobject-introspection-dev"
 checkdepends="xvfb-run hunspell-en ibus"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-dbg"
 source="https://download.gnome.org/sources/gspell/${pkgver%.*}/gspell-$pkgver.tar.xz"
 
 case "$CARCH" in
