community/libsoup: fix buildtype, add -dbg subpkg

--- a/community/libsoup/APKBUILD
+++ b/community/libsoup/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=libsoup
 pkgver=2.68.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Gnome HTTP client/server Library"
 url="https://wiki.gnome.org/Projects/libsoup"
 arch="all"
 options="!check" # Wants to bind to ports, which doesn't work in our environment
 license="LGPL-2.0-or-later"
-subpackages="$pkgname-dev $pkgname-lang"
+subpackages="$pkgname-dev $pkgname-lang $pkgname-dbg"
 depends="glib-networking gsettings-desktop-schemas"
 makedepends="libgcrypt-dev libgpg-error-dev zlib-dev meson
 	gobject-introspection-dev vala libxml2-dev libpsl-dev sqlite-dev"
@@ -25,6 +25,7 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--localstatedir=/var \
+		--buildtype=debugoptimized \
 		-Dtls_check=false \
 		-Dintrospection=enabled \
 		-Dvapi=enabled \
