community/libxmlb: fix buildtype, add -dbg subpkg

--- a/community/libxmlb/APKBUILD
+++ b/community/libxmlb/APKBUILD
@@ -2,19 +2,20 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=libxmlb
 pkgver=0.1.14
-pkgrel=0
+pkgrel=1
 pkgdesc="Library to help create and query binary XML blobs"
 url="https://github.com/hughsie/libxmlb"
 arch="all"
 license="LGPL-2.1-or-later"
 makedepends="meson glib-dev gobject-introspection-dev"
 checkdepends="shared-mime-info"
-subpackages="$pkgname-dev:_dev"
+subpackages="$pkgname-dev:_dev $pkgname-dbg"
 source="$pkgname-$pkgver.tar.gz::https://github.com/hughsie/libxmlb/archive/$pkgver.tar.gz"
 
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=debugoptimized \
 		-Dgtkdoc=false \
 		-Dtests=true \
 		-Dstemmer=false \
