--- a/community/ostree/APKBUILD
+++ b/community/ostree/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=ostree
 pkgver=2019.6
-pkgrel=0
+pkgrel=1
 pkgdesc="Operating system and container binary deployment and upgrades"
 url="https://github.com/ostreedev/ostree"
 arch="all"
@@ -10,7 +10,7 @@ license="LGPL-2.0-or-later"
 makedepends="bison glib-dev xz-dev libarchive-dev e2fsprogs-dev
 	libsoup-dev gpgme-dev fuse-dev linux-headers gtk-doc libxslt
 	automake autoconf libtool"
-subpackages="$pkgname-dev $pkgname-doc"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-dbg"
 source="https://github.com/ostreedev/ostree/releases/download/v$pkgver/libostree-$pkgver.tar.xz
 	musl-fixes.patch
 	"
