--- a/main/gdk-pixbuf/APKBUILD
+++ b/main/gdk-pixbuf/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gdk-pixbuf
 pkgver=2.40.0
-pkgrel=0
+pkgrel=1
 pkgdesc="GTK+ image loading library"
 url="https://wiki.gnome.org/Projects/GdkPixbuf"
 arch="all"
@@ -25,17 +25,15 @@ replaces="gtk+"
 #     - CVE-2017-6314
 
 build() {
-	cd "$builddir"
 	meson \
 		--prefix=/usr \
+		--buildtype=debugoptimized \
 		-Dinstalled_tests=false \
 		output .
 	ninja -C output
 }
 
 check() {
-	cd "$builddir"
-
 	# pixbuf-area-updated takes over 50 minutes to run on Drone
 	case $CARCH in
 		armhf)
@@ -49,7 +47,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
