main/json-glib: fix buildtype, add -dbg subpkg
Also fix the url and license while we're at it and clean up

--- a/main/json-glib/APKBUILD
+++ b/main/json-glib/APKBUILD
@@ -1,24 +1,24 @@
-# Maintainer: Natanael Copa <ncopa@alpinelinux.org>
+# Contributor: Natanael Copa <ncopa@alpinelinux.org>
+# Contributor: Rasmus Thomsen <oss@cogitri.dev>
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=json-glib
 pkgver=1.4.4
-pkgrel=0
+pkgrel=1
 pkgdesc="JSON library built on GLib"
 arch="all"
-url="http://live.gnome.org/JsonGlib"
-license="GPL"
-depends=""
+url="https://wiki.gnome.org/Projects/JsonGlib"
+license="LGPL-2.1-or-later"
 makedepends="gobject-introspection-dev glib-dev meson gtk-doc"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-tests"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-tests $pkgname-dbg"
 source="https://download.gnome.org/sources/json-glib/${pkgver%.*}/json-glib-$pkgver.tar.xz"
 
-buiddir="$srcdir"/$pkgname-$pkgver
 build() {
 	cd $srcdir/$pkgname-$pkgver
 	meson \
-		--prefix /usr \
-		--libdir /usr/lib \
-		--buildtype release \
-		--default-library shared \
+		--prefix=/usr \
+		--libdir=/usr/lib \
+		--buildtype=debugoptimized \
+		--default-library=shared \
 		-Ddocs=true \
 		.  build
 	ninja -C build
@@ -29,7 +29,6 @@ check() {
 }
 
 package() {
-
 	DESTDIR="$pkgdir" ninja -C "$builddir"/build install
 }
 
