--- a/main/libgudev/APKBUILD
+++ b/main/libgudev/APKBUILD
@@ -2,17 +2,16 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=libgudev
 pkgver=233
-pkgrel=0
+pkgrel=1
 pkgdesc="GObject-based wrapper library for libudev"
 url="https://wiki.gnome.org/Projects/libgudev"
 arch="all"
 license="LGPL-2.0-or-later"
 makedepends="glib-dev gobject-introspection-dev eudev-dev"
-subpackages="$pkgname-dev"
+subpackages="$pkgname-dev $pkgname-dbg"
 source="https://download.gnome.org/sources/libgudev/$pkgver/libgudev-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -25,12 +24,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
