--- a/community/librsvg/APKBUILD
+++ b/community/librsvg/APKBUILD
@@ -3,19 +3,20 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=librsvg
 pkgver=2.46.4
-pkgrel=0
+pkgrel=1
 pkgdesc="SAX-based renderer for SVG files into a GdkPixbuf"
 url="https://wiki.gnome.org/Projects/LibRsvg"
 arch="all !s390x" # rust
 license="LGPL-2.1-or-later"
 options="!check" # Failing
-subpackages="$pkgname-dev $pkgname-doc"
+subpackages="$pkgname-dev $pkgname-doc $pkgname-dbg $pkgname-lang"
 makedepends="$depends_dev bzip2-dev cairo-dev glib-dev cargo rust vala
 	gobject-introspection-dev gtk+3.0-dev libcroco-dev libgsf-dev"
 source="https://download.gnome.org/sources/librsvg/${pkgver%.*}/librsvg-$pkgver.tar.xz
 	"
 
 build() {
+	export RUSTFLAGS="$RUSTFLAGS -C debuginfo=2"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
