main/musl: update URL and sources
The current URL states the following:

	musl has moved to a new domain: musl.libc.org

Don't think it is worth it to rebuild the package for this though.

--- a/main/musl/APKBUILD
+++ b/main/musl/APKBUILD
@@ -4,7 +4,7 @@ pkgname=musl
 pkgver=1.1.24
 pkgrel=0
 pkgdesc="the musl c library (libc) implementation"
-url="http://www.musl-libc.org/"
+url="https://musl.libc.org/"
 arch="all"
 license="MIT"
 subpackages="$pkgname-libintl:libintl:noarch
@@ -17,7 +17,7 @@ nocc)	pkgname="musl-dev"; subpackages="";;
 nolibc) ;;
 *)	subpackages="$subpackages $pkgname-utils";;
 esac
-source="http://www.musl-libc.org/releases/musl-$pkgver.tar.gz
+source="https://musl.libc.org/releases/musl-$pkgver.tar.gz
 	handle-aux-at_base.patch
 
 	ldconfig
