community/connman: upgrade to 1.38
remove musl.patch, fixed upstream
add libmnl-dev to makedepends
enable iwd support

--- a/community/connman/APKBUILD
+++ b/community/connman/APKBUILD
@@ -1,19 +1,18 @@
 # Maintainer: Clayton Craft <clayton@craftyguy.net>
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 pkgname=connman
-pkgver=1.37
-pkgrel=1
+pkgver=1.38
+pkgrel=0
 pkgdesc="A daemon for managing internet connections"
 url="https://01.org/connman"
 arch="all"
 license="GPL-2.0-only"
 depends="wpa_supplicant"
 makedepends="autoconf automake dbus-dev glib-dev iptables-dev libtool
-	readline-dev"
+	readline-dev libmnl-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc"
 source="https://www.kernel.org/pub/linux/network/connman/connman-$pkgver.tar.xz
 	libresolv.patch
-	musl.patch
 	connman.initd
 	"
 
@@ -31,7 +30,8 @@ build() {
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
 		--localstatedir=/var \
-		--disable-wispr
+		--disable-wispr \
+		--enable-iwd
 	make
 }
 
@@ -45,7 +45,6 @@ package() {
 	install -Dm755 "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 }
 
-sha512sums="5d5363105aedd0c9d609dd5c64eb832d9ff80923a944d9d3738337a61f180ded227f2ae1ff7912bed8826b35f0cfd20488e3ffd3801f0e53e90f98498e19efb6  connman-1.37.tar.xz
+sha512sums="9c8f77c4dd62763ccb9ea5cc5d285a8a1c51bb09a82eafc73246231557a4f627ae1e5e4a9df5e104457390ebba643349d7d67800a4ee4c17c6dceff192afe8d4  connman-1.38.tar.xz
 122b48fc9e25354e25ba3a3e0864bdd84da84457fed94aeea726bcb189b2f05f2cc361ae15f44af5c49bcee572e91e4c0488ef3b0bc79d20f6efe15853fb6b3a  libresolv.patch
-67dea4bc1ee55ca4b3eb976c3abe0e14d78fc052c102d08c90f63f3d16fc147ba04db391f448908dce7033774672c25af0619ddfc3e6020bfea60dc38b8bd7b4  musl.patch
 42b45d44f5eed966ba003683fcb54ffb4e9a0331599ff1c8e5e64c4c06b42d380c3852b7c73881a1be1eaca887906cac9aede1f5579e8e139fdf90ca8d7adf15  connman.initd"
