main/sqlite: add -tcl subpackage
fixes #6608

--- a/main/sqlite/APKBUILD
+++ b/main/sqlite/APKBUILD
@@ -2,13 +2,13 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 pkgname=sqlite
 pkgver=3.31.1
-pkgrel=0
+pkgrel=1
 pkgdesc="C library that implements an SQL database engine"
 url="https://www.sqlite.org/"
 arch="all"
 license="Public-Domain"
-makedepends="readline-dev"
-subpackages="$pkgname-static $pkgname-doc $pkgname-dev $pkgname-libs"
+makedepends="readline-dev tcl-dev libtool autoconf automake"
+subpackages="$pkgname-static $pkgname-dev $pkgname-tcl:_tcl $pkgname-libs $pkgname-doc"
 
 # compute _ver
 _a=${pkgver%%.*}
@@ -27,7 +27,7 @@ _ver=${_a}${_b}${_c}${_d}
 
 # these variables depend on _ver being set
 builddir="$srcdir/$pkgname-autoconf-$_ver"
-source="https://www.sqlite.org/2020/$pkgname-autoconf-$_ver.tar.gz
+source="https://www.sqlite.org/2020/sqlite-autoconf-$_ver.tar.gz
 	license.txt
 	"
 
@@ -66,11 +66,22 @@ build() {
 		--enable-dynamic-extensions \
 		--enable-fts3
 
+	cd tea
+	./configure \
+		--build="$CBUILD" \
+		--host="$CHOST" \
+		--prefix=/usr \
+		--with-system-sqlite \
+		--enable-threads
+	cd "$builddir"
+
+
 	# rpath removal
 	sed -i 's|^hardcode_libdir_flag_spec=.*|hardcode_libdir_flag_spec=""|g' libtool
 	sed -i 's|^runpath_var=LD_RUN_PATH|runpath_var=DIE_RPATH_DIE|g' libtool
 
 	make
+	make -C tea
 }
 
 check() {
@@ -79,6 +90,7 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+	make -C tea DESTDIR="$pkgdir" install
 
 	install -Dm0644 sqlite3.1 \
 		"$pkgdir"/usr/share/man/man1/sqlite3.1
@@ -98,6 +110,13 @@ static() {
 	pkgdesc="Sqlite3 static library"
 	mkdir -p "$subpkgdir"/usr/lib
 	mv "$pkgdir"/usr/lib/lib*.a "$subpkgdir"/usr/lib/
+}
+
+_tcl() {
+	pkgdesc="sqlite Tcl Extension Architecture (TEA)"
+
+	mkdir -p "$subpkgdir"/usr/lib/
+	mv "$pkgdir"/usr/lib/sqlite$pkgver "$subpkgdir"/usr/lib/
 }
 
 sha512sums="d85250ba5f78f0c918880f663741709aba662192f04888b2324a0df17affdf5b8540e8428c6c7315119806e7adad758ea281c9b403c0ad94ac6a9bd1b93fd617  sqlite-autoconf-3310100.tar.gz
