main/freeradius: add symlink mod-enabled/sql to -sql subpkg

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -5,7 +5,7 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=freeradius
 pkgver=3.0.20
-pkgrel=6
+pkgrel=7
 pkgdesc="RADIUS (Remote Authentication Dial-In User Service) server"
 url="https://freeradius.org/"
 arch="all"
@@ -264,6 +264,7 @@ sql() {
 
 	amove $_radconfdir/sites-available/buffered-sql
 	amove $_radmodsdir/*sql*
+	_enable_mod sql
 }
 
 mysql() {
