--- a/community/gst-plugins-good/APKBUILD
+++ b/community/gst-plugins-good/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gst-plugins-good
 pkgver=1.16.2
-pkgrel=3
+pkgrel=4
 pkgdesc="GStreamer streaming media framework good plug-ins"
 url="https://gstreamer.freedesktop.org"
 arch="all"
@@ -13,7 +13,8 @@ makedepends="cairo-dev flac-dev gdk-pixbuf-dev glib-dev gst-plugins-base-dev
 	libdv-dev libgudev-dev libice-dev libiec61883-dev libjpeg-turbo-dev
 	libogg-dev libpng-dev libshout-dev libsm-dev libsoup-dev libvpx-dev
 	libxdamage-dev libxext-dev libxv-dev linux-headers meson mpg123-dev
-	orc-compiler orc-dev taglib-dev v4l-utils-dev wavpack-dev zlib-dev"
+	orc-compiler orc-dev taglib-dev v4l-utils-dev wavpack-dev zlib-dev
+	pulseaudio-dev"
 ldpath="/usr/lib/gstreamer-1.0"
 source="https://gstreamer.freedesktop.org/src/gst-plugins-good/gst-plugins-good-$pkgver.tar.xz"
 options="!check" # elements/souphttpsrc fails
