community/transmission: build with CMake
This allows us to build a static lib of transmission which can
be used e.g. for gnome-fragments

Also adopt maintainership

--- a/community/transmission/APKBUILD
+++ b/community/transmission/APKBUILD
@@ -1,50 +1,42 @@
-# Maintainer: Carlo Landmeter <clandmeter@gmail.com>
+# Contributor: Rasmus Thomsen <oss@cogitri.dev>
+# Contributor: Carlo Landmeter <clandmeter@gmail.com>
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=transmission
 pkgver=2.94
-pkgrel=3
+pkgrel=4
 pkgdesc="Lightweight GTK BitTorrent client"
 url="http://www.transmissionbt.com"
 install="transmission-daemon.pre-install transmission-daemon.post-upgrade"
 arch="all"
-license="GPL-2.0-or-later MIT"
-depends=""
+license="GPL-2.0-or-later AND MIT"
 pkgusers="transmission"
 pkggroups="transmission"
-makedepends="autoconf automake bsd-compat-headers curl-dev dbus-glib-dev
+makedepends="cmake bsd-compat-headers curl-dev dbus-glib-dev
 	gtk+3.0-dev intltool libevent-dev libnotify-dev openssl-dev tar"
-source="https://github.com/transmission/$pkgname-releases/raw/master/$pkgname-$pkgver.tar.xz
+options="!check" # no tests
+source="https://github.com/transmission/transmission-releases/raw/master/transmission-$pkgver.tar.xz
 	transmission-daemon.initd
 	transmission-daemon.confd
 	"
-subpackages="$pkgname-cli $pkgname-daemon $pkgname-doc $pkgname-lang"
-options="!checkroot"
-builddir="$srcdir/$pkgname-$pkgver"
+subpackages="$pkgname-cli $pkgname-daemon $pkgname-doc $pkgname-lang $pkgname-static"
 
 build() {
-	cd "$builddir"
-
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr \
-		--sysconfdir=/etc \
-		--mandir=/usr/share/man \
-		--infodir=/usr/share/info \
-		--localstatedir=/var \
-		--enable-utp \
-		--with-inotify \
-		--enable-cli
-	make
-}
-
-check() {
-	cd "$builddir"
-	make check
+	cmake -B build \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DBUILD_SHARED_LIBS=True \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		-DENABLE_GTK=TRUE \
+		-DENABLE_CLI=TRUE \
+		-DWITH_SYSTEMD=FALSE \
+		-DINSTALL_LIB=TRUE
+	make -C build
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 daemon() {
