--- a/community/gnome-keyring/APKBUILD
+++ b/community/gnome-keyring/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-keyring
 pkgver=3.34.0
-pkgrel=0
+pkgrel=1
 pkgdesc="GNOME keyring"
 url="https://wiki.gnome.org//Projects/GnomeKeyring"
 arch="all"
@@ -11,6 +11,9 @@ makedepends="gtk+3.0-dev gcr-dev libcap-ng-dev linux-pam-dev
 	intltool gobject-introspection-dev gtk-doc libxslt
 	openssh-client libgcrypt-dev"
 checkdepends="python3 dbus-x11 xvfb-run"
+provides="dbus:org.freedesktop.Secrets"
+# Highest priority of the bunch since it has the least deps
+provider_priority=100
 options="!check" # Gets stuck on CI
 subpackages="$pkgname-lang $pkgname-doc"
 source="https://download.gnome.org/sources/gnome-keyring/${pkgver%.*}/gnome-keyring-$pkgver.tar.xz"
