community/kwallet: provide dbus:org.freedesktop.Secrets
The libsecret dbus API can be provided by many applications, so
this package is provided by all packages which provide it so that
users can choose.

--- a/community/kwallet/APKBUILD
+++ b/community/kwallet/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kwallet
 pkgver=5.67.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Secure and unified container for user passwords"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
@@ -11,6 +11,9 @@ depends_dev="libgcrypt-dev kcoreaddons-dev kconfig-dev kwindowsystem-dev ki18n-d
 makedepends="$depends_dev extra-cmake-modules qt5-qttools-dev doxygen graphviz kdoctools-dev"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kwallet-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
+provides="dbus:org.freedesktop.Secrets"
+# 2nd highst priority after gnome-keyring, mainly for KDE
+provider_priority=10
 
 prepare() {
 	default_prepare
