community/keepassxc: provide dbus:org.freedesktop.Secrets
The libsecret dbus API can be provided by many applications, so
this package is provided by all packages which provide it so that
users can choose.

--- a/community/keepassxc/APKBUILD
+++ b/community/keepassxc/APKBUILD
@@ -5,7 +5,7 @@
 # Maintainer: Orson Teodoro <orsonteodoro@hotmail.com>
 pkgname=keepassxc
 pkgver=2.5.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Community-driven port of the Windows application Keepass Password Safe"
 url="https://keepassxc.org/"
 arch="all"
@@ -16,6 +16,9 @@ makedepends="argon2-dev cmake libgcrypt-dev libqrencode-dev libsodium-dev
 	qt5-qtx11extras-dev zlib-dev quazip-dev yubico-c-dev ykpers-dev"
 source="https://github.com/keepassxreboot/keepassxc/releases/download/$pkgver/keepassxc-$pkgver-src.tar.xz"
 subpackages="$pkgname-doc"
+provides="dbus:org.freedesktop.Secrets"
+# Smallest priority, unusual setup
+provider_priority=5
 
 build() {
 	cmake . \
