testing/py3-feedgenerator: upgrade to 1.9.1

--- a/testing/py3-feedgenerator/APKBUILD
+++ b/testing/py3-feedgenerator/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-feedgenerator
 _pkgname=feedgenerator
-pkgver=1.9
-pkgrel=4
+pkgver=1.9.1
+pkgrel=0
 pkgdesc="A Python feed generator"
 url="https://github.com/getpelican/feedgenerator"
 arch="noarch"
@@ -14,7 +14,7 @@ source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname
 builddir="$srcdir"/$_pkgname-$pkgver
 
 replaces="py-feedgenerator" # Backwards compatibility
-provices="py-feedgenerator=$pkgver-r$pkgrel" # Backwards compatibility
+provides="py-feedgenerator=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
 	python3 setup.py build
@@ -28,4 +28,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="77f4df51c6bdf261f0d1665206ab048a21f8660cf8f2c7abf3d71e17c63284240d0eaa690dd6d53b0b7d8ce9c9e0349094d5270c75c2a069608b7717538d7fa1  feedgenerator-1.9.tar.gz"
+sha512sums="db3642acb8f0c9fd692f37a79cf5862e60687a1745afbc6593d37a0372adb994de603238a17a8eae95ffcc993195f63037f16122a3cf8771e6922dea492fb5d5  feedgenerator-1.9.1.tar.gz"
