--- a/community/darktable/APKBUILD
+++ b/community/darktable/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=darktable
 pkgver=3.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="an open source photography workflow application and raw developer"
 url="https://www.darktable.org/"
 arch="x86_64 aarch64"
 license="GPL-3.0-or-later"
+depends="dbus:org.freedesktop.Secrets"
 makedepends="
 	cmake
 	colord-dev
