community/epiphany: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/epiphany/APKBUILD
+++ b/community/epiphany/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=epiphany
 pkgver=3.34.4
-pkgrel=2
+pkgrel=3
 pkgdesc="A simple, clean, beautiful view of the web"
 url="https://wiki.gnome.org/Apps/Web"
 arch="all !s390x" # libhandy is not available on s390x
 license="GPL-3.0-or-later"
-depends="gsettings-desktop-schemas"
+depends="gsettings-desktop-schemas dbus:org.freedesktop.Secrets"
 makedepends="meson iso-codes-dev gtk+3.0-dev gsettings-desktop-schemas-dev
 	icu-dev json-glib-dev libdazzle-dev libhandy-dev libnotify-dev libsecret-dev
 	libsoup-dev libxml2-dev nettle-dev sqlite-dev webkit2gtk-dev gcr-dev itstool"
