community/geary: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/geary/APKBUILD
+++ b/community/geary/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=geary
 pkgver=3.34.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Geary is an email application built around conversations"
 url="https://wiki.gnome.org/Apps/Geary"
 # tests fail on armhf
 # libhandy is not available on s390x
 arch="all !armhf !s390x"
 license="LGPL-2.1-or-later AND CC-BY-3.0 AND BSD-2-Clause"
-depends="iso-codes"
+depends="iso-codes dbus:org.freedesktop.Secrets"
 makedepends="meson glib-dev gtk+3.0-dev sqlite-dev webkit2gtk-dev enchant2-dev
 	gcr-dev folks-dev libgee-dev gnome-online-accounts-dev json-glib-dev iso-codes-dev
 	libcanberra-dev libnotify-dev libsecret-dev libxml2-dev vala gmime26-dev itstool
