community/gnome-control-center: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/gnome-control-center/APKBUILD
+++ b/community/gnome-control-center/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-control-center
 pkgver=3.34.4
-pkgrel=1
+pkgrel=2
 pkgdesc="GNOME control center"
 url="https://gitlab.gnome.org/GNOME/gnome-control-center"
 # limited by gnome-online-accounts
 arch="all !s390x"
 license="GPL-2.0-or-later"
-depends="cups-pk-helper openrc-settingsd"
+depends="cups-pk-helper openrc-settingsd dbus:org.freedesktop.Secrets"
 makedepends="
 	clutter-dev
 	clutter-gtk-dev
