--- a/community/gnome-initial-setup/APKBUILD
+++ b/community/gnome-initial-setup/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-initial-setup
 pkgver=3.34.3
-pkgrel=2
+pkgrel=3
 pkgdesc="A simple, easy,and safe way to prepare a new system"
 url="https://wiki.gnome.org/Design/OS/InitialSetup"
 arch="all !armhf !s390x !ppc64le" # limited by gnome-shell&mutter
 license="GPL-2.0-or-later"
-depends="gsettings-desktop-schemas iso-codes"
+depends="gsettings-desktop-schemas iso-codes dbus:org.freedesktop.Secrets"
 makedepends="meson cheese-dev ibus-dev networkmanager-dev polkit-dev
 	accountsservice-dev gnome-desktop-dev fontconfig-dev libgweather-dev
 	gtk+3.0-dev gnome-online-accounts-dev gdm-dev geocode-glib-dev
