community/gnome-online-accounts: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/gnome-online-accounts/APKBUILD
+++ b/community/gnome-online-accounts/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-online-accounts
 pkgver=3.34.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Single sign-on framework for GNOME"
 url="https://wiki.gnome.org/Projects/GnomeOnlineAccounts"
 arch="all"
 license="GPL-2.0-or-later"
+depends="dbus:org.freedesktop.Secrets"
 makedepends="gnome-desktop-dev libxslt itstool libxml2-utils
 	webkit2gtk-dev json-glib-dev rest-dev libsecret-dev
 	docbook-xsl docbook-xml gobject-introspection-dev vala"
