community/gvfs: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/gvfs/APKBUILD
+++ b/community/gvfs/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gvfs
 pkgver=1.42.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Backends for the gio framework in GLib"
 url="https://wiki.gnome.org/Projects/gvfs"
 arch="all"
 license="LGPL-2.0-or-later"
-depends="gsettings-desktop-schemas"
+depends="gsettings-desktop-schemas dbus:org.freedesktop.Secrets"
 makedepends="fuse3-dev libgudev-dev expat-dev samba-dev libxml2-dev
 	libsoup-dev avahi-dev libarchive-dev udisks2-dev libgphoto2-dev
 	libcdio-paranoia-dev libgcrypt-dev libxslt-dev docbook-xsl
