community/gnote: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/gnote/APKBUILD
+++ b/community/gnote/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnote
 pkgver=3.34.1
-pkgrel=0
+pkgrel=1
 pkgdesc="https://wiki.gnome.org/Apps/Gnote"
 url="Gnote is a port of Tomboy to C++"
 arch="all"
 license="GPL-3.0-or-later"
+depends="dbus:org.freedesktop.Secrets"
 makedepends="gtk+3.0-dev glibmm-dev gtkmm3-dev libsecret-dev gspell-dev
 	libxslt-dev util-linux-dev intltool itstool desktop-file-utils"
 options="!check" # missing dep: unittestcpp
