community/networkmanager-openvpn: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/networkmanager-openvpn/APKBUILD
+++ b/community/networkmanager-openvpn/APKBUILD
@@ -3,12 +3,12 @@
 pkgname=networkmanager-openvpn
 _pkgname=NetworkManager-openvpn
 pkgver=1.8.10
-pkgrel=2
+pkgrel=3
 pkgdesc="NetworkManager VPN plugin for OpenVPN"
 url="https://wiki.gnome.org/Projects/NetworkManager/VPN"
 arch="all !s390x" # Limited by network-manager-applet-dev -> networkmanager-dev
 license="GPL-2.0-or-later"
-depends="openvpn"
+depends="openvpn dbus:org.freedesktop.Secrets"
 makedepends="intltool glib-dev gtk+3.0-dev network-manager-applet-dev libsecret-dev"
 source="https://download.gnome.org/sources/$_pkgname/${pkgver%.*}/$_pkgname-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
