community/network-manager-applet: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/network-manager-applet/APKBUILD
+++ b/community/network-manager-applet/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=network-manager-applet
 pkgver=1.8.24
-pkgrel=0
+pkgrel=1
 pkgdesc="GTK network manager applet"
 url="https://wiki.gnome.org/Projects/NetworkManager"
 arch="all !s390x" # Limited by networkmanager-dev
 license="GPL-2.0-or-later"
+depends="dbus:org.freedesktop.Secrets"
 makedepends="
 	intltool
 	gcr-dev
